# pygments-redis

./: .gitignore  README.md  requirements.txt  setup.cfg  test.sh
.circleci/: config.yml
pygments_redis/: __init__.py  redis.py
scripts/: demo.py
tests/: test_redis.py
