[metadata]
name = pygments_redis
version = 0.2
description =  A Pygments lexer for the Redis CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realpython/pygments-redis
author = Real Python
author_email = info@realpython.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
keywords =
    lexer
    redis

[options]
py_modules = pygments_redis
install_requires = pygments
python_requires = >=3.4
packages = pygments_redis

[options.entry_points]
pygments.lexers =
    redis=pygments_redis:RedisLexer

[bdist_wheel]
universal = True
